<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.cienet.electriccalculator.MainActivity" >

    <item
        android:id="@+id/main_insert_user"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/insert_user"
        android:icon="@android:drawable/ic_menu_edit"/>
    
    <item
        android:id="@+id/main_input_total"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/input_total_money"
        android:icon="@android:drawable/ic_menu_sort_by_size"/>
    
    <item
        android:id="@+id/main_setting"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
